fixed issues with jumping

--- a/style.css
+++ b/style.css
@@ -72,5 +72,5 @@ header #action-bar {
 }
 
 #oatchi.jump {
-    top: 0;
+    top: 30vh;
 }
